Fixed NewsLetter.css title gap

--- a/frontend/src/Components/NewsLetter/NewsLetter.css
+++ b/frontend/src/Components/NewsLetter/NewsLetter.css
@@ -9,7 +9,7 @@
     padding: 0px 140px;
     margin-bottom: 150px;
     background-image: linear-gradient(120deg, 	#00968830 0%, #FF6F6130	 60%);
-    gap: 15px;
+    gap: auto;
 }
 
 .newsletter h1{
